# malice-rs

./: Cargo.toml  README.md
src/: command.rs  listener.rs  logger.rs  main.rs  util.rs
src/deprecated/: listener.rs
src/util/: command.rs  tasks.rs  tcpserver.rs
