[package]
name = "malice-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
colored = "2.0.0"
chrono = "0.4.22"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"

http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
warp = "0.3"

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
]